@@ -4,6 +4,12 @@ NEWS/Changelog
     o	add readTIFF(..., indexed=TRUE) which return indexed images as
 	color map and an index matrix.
 
+    o	fixed a bug in writing a TIFF file consisting of multiple
+	subimages
+
+    o	prevent TIFF from re-entering error calls
+
+
 0.1-0	2012-08-04
     o	first CRAN release
 
